@@ -4,7 +4,8 @@ Pending changes in the mainline
 Maintenance
 -----------
 
-* underscores are now allowed in peers/modalities symbolic names
+* Underscores are now allowed in peers/modalities symbolic names
+* Fix compatibility with C-MOVE SCU requests issued by Ambra
 
 
 Version 1.7.3 (2020-08-24)
